--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
 drf-spectacular==0.27.2
+environ==1.0
+gunicorn==22.0.0
 idna==3.7
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 oauthlib==3.2.2
+packaging==24.0
 psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
