--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==42.0.7
 defusedxml==0.8.0rc2
 dj-database-url==2.1.0
 Django==5.0.6
+django-environ==0.11.2
 django-filter==24.2
 django-templated-mail==1.1.1
 djangorestframework==3.15.1
