edited post function for workout

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_PASSWORD="molly"
 DB_PORT="5432"
 DB_HOST="127.0.0.1"
 DB_NAME="workout_planner_db"
-#ENV="DEV"
-ENV="PROD"
+ENV="DEV"
+#ENV="PROD"
 DATABASE_URL="postgres://pguser:6dq9ILkvHKibJRfFXF9YezAdBN1VnWfd@dpg-cp0ih0q1hbls73ebbf0g-a.frankfurt-postgres.render.com/workout_planner_db_jj4s"
